# scsh

./: AST.cpp  AST.h  CMakeLists.txt  Exec.cpp  Exec.h  README.md  Util.c  Util.cpp  Util.h  scsh.cpp
test/: AST_test.cpp  CMakeLists.txt  SyntaxTree_test.cpp
